--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_screenutil: ^5.9.3
-  table_calendar: ^3.2.0
   google_fonts: ^6.3.2
-  step_progress_indicator: ^1.0.2
+  shared_preferences: ^2.5.4
   intl: ^0.20.2
   flutter_launcher_icons: ^0.14.4
   flutter_native_splash: "^2.4.3"
+  get: ^4.6.6
+  http: ^1.2.0
 
 
 dev_dependencies:
