--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   phosphor_flutter: ^2.1.0
   image_picker: ^1.2.1
   get_storage: ^2.1.1
+  device_preview: ^1.3.1
+  flutter_pdfview: ^1.4.3
+  dio: ^5.9.0
+  path_provider: ^2.1.2
+  flutter_file_dialog: ^3.0.3
+  url_launcher: ^6.3.0
 
 
 
