--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   shared_preferences: ^2.5.4
   intl: ^0.20.2
   flutter_launcher_icons: ^0.14.4
-  flutter_native_splash: "^2.4.3"
   get: ^4.6.6
   http: ^1.2.0
   phosphor_flutter: ^2.1.0
@@ -49,14 +48,9 @@ flutter_launcher_icons:
   macos:
     generate: true
   image_path: "assets/icon/icon.png"
+  remove_alpha_ios: true
 
-flutter_native_splash:
-  color: Colors.white
-  image: "assets/icon/icon.png"
-  branding: "assets/icon/icon.png"
-  fullscreen: true
-  android: true
-  ios: true
+
 
 
 
